fixes fixed with z-index

--- a/css/about.css
+++ b/css/about.css
@@ -55,9 +55,11 @@
 .swiperSlideImage {
   border-radius: 48px;
   overflow: hidden;
+  position: relative;
+  height: 550px;
 }
 
-.aboutImg__content img {
+.swiperSlideImage__img {
   position: absolute;
   top: 0;
   left: 0;
@@ -308,7 +310,7 @@
     margin-top: 48px;
   }
 
-  .aboutImg__content {
+  .swiperSlideImage {
     height: 480px;
   }
 
@@ -348,7 +350,7 @@
 }
 
 @media (max-width: 1024px) {
-  .aboutImg__content {
+  .swiperSlideImage {
     height: 400px;
   }
 
@@ -393,12 +395,8 @@
     margin-top: 40px;
   }
 
-  .aboutImg__content {
+  .swiperSlideImage {
     height: 320px;
-    border-radius: 24px;
-  }
-
-  .aboutImg__content img {
     border-radius: 24px;
   }
 
@@ -448,7 +446,7 @@
     margin-top: 16px;
   }
 
-  .aboutImg__content {
+  .swiperSlideImage {
     height: 240px;
   }
 
